deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memollection-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memollection-app
  template:
    metadata:
      labels:
        app: memollection-app
    spec:
      containers:
        - name: memollection-app
          image: registry.kb/memollection/app:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: memollection-app-svc
spec:
  selector:
    app: memollection-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9999
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memollection-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - memollection.kb
      secretName: memollection-tls
  rules:
    - host: memollection.kb
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memollection-app-svc
                port:
                  number: 80
